--- a/factory/iot-dashboard/package.json
+++ b/factory/iot-dashboard/package.json
@@ -9,6 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "electron": "^1.6.11",
+    "highcharts": "^5.0.12",
+    "jquery": "^3.2.1",
     "mqtt": "^2.9.2"
+  },
+  "devDependencies": {
+    "bower": "^1.8.0"
   }
 }
